--- a/portfolio/web/src/layouts/Layout.astro
+++ b/portfolio/web/src/layouts/Layout.astro
@@ -7,6 +7,7 @@ interface Props {
 import { Image } from 'astro:assets';
 import logo from '../assets/logo.webp';
 import favicon from '../assets/favicon.png';
+import '@fortawesome/fontawesome-free/css/all.min.css';
 
 const {
 	title,
@@ -21,7 +22,6 @@ const {
 		<meta name="description" content={description} />
 		<meta name="viewport" content="width=device-width" />
 		<link rel="icon" type="image/png" href={favicon.src} />
-		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css">
 		<meta name="generator" content={Astro.generator} />
 		<title>{title}</title>
 	</head>
